# llm-eval-human-annotation-harness

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
annotation/: annotation_store.py  app.py  disagreement_detector.py  rubric_loader.py
dashboard/: app.py
dashboard/pages/: 1_rate.py  2_inputs.py  2_metrics.py  3_edge_cases.py  4_edge_cases.py  5_scorecards.py  6_diagnostics.py  7_adjudication.py  8_exports.py
docs/: EVAL_WRITEUP.md  POLICY.md  RUBRIC.md  architecture.md
eval/: adjudication.py  agreement_metrics.py  coverage_metrics.py  dataset_diagnostics.py  drift_metrics.py  edge_case_clustering.py  reports.py  scorecards.py
generation/: generate_responses.py  response_store.py
ingestion/: load_hh_rlhf.py
prompts/: curation_notes.md  source_prompts.jsonl
scripts/: seed_demo_annotations.py
tests/: test_agreement_metrics.py  test_annotation_store.py  test_disagreement_detector.py  test_hh_rlhf_ingestion.py  test_operational_metrics.py
