[project]
name = "llm-eval-harness"
version = "0.1.0"
description = "Human-in-the-loop LLM output evaluation harness with rubric versioning, annotation audit logs, and data quality metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.20",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "krippendorff>=0.6",
    "scikit-learn>=1.3",
    "sqlalchemy>=1.4",
    "streamlit>=1.35",
]

[project.optional-dependencies]
generation = [
    "anthropic>=0.34",
    "openai>=1.40",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B905"]
